--- a/XMLProject/nbproject/project.properties
+++ b/XMLProject/nbproject/project.properties
@@ -32,7 +32,8 @@ j2ee.server.type=Tomcat60
 jar.compress=false
 javac.classpath=\
     ${libs.metro.classpath}:\
-    ${libs.Sql.classpath}
+    ${libs.Sql.classpath}:\
+    ${libs.jstl11.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
