--- a/XMLProject/nbproject/project.properties
+++ b/XMLProject/nbproject/project.properties
@@ -33,7 +33,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.metro.classpath}:\
     ${libs.Sql.classpath}:\
-    ${libs.jstl11.classpath}
+    ${libs.jstl11.classpath}:\
+    ${libs.jaxb.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
