--- a/XMLProject/nbproject/project.properties
+++ b/XMLProject/nbproject/project.properties
@@ -24,6 +24,16 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.avalon-framework-4.2.0.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\avalon-framework-4.2.0.jar
+file.reference.batik-all-1.7.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\batik-all-1.7.jar
+file.reference.commons-io-1.3.1.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\commons-io-1.3.1.jar
+file.reference.commons-logging-1.0.4.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\commons-logging-1.0.4.jar
+file.reference.serializer-2.7.0.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\serializer-2.7.0.jar
+file.reference.xalan-2.7.0.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\xalan-2.7.0.jar
+file.reference.xercesImpl-2.7.1.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\xercesImpl-2.7.1.jar
+file.reference.xml-apis-1.3.04.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\xml-apis-1.3.04.jar
+file.reference.xml-apis-ext-1.3.04.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\xml-apis-ext-1.3.04.jar
+file.reference.xmlgraphics-commons-1.4.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\xmlgraphics-commons-1.4.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
@@ -34,7 +44,17 @@ javac.classpath=\
     ${libs.metro.classpath}:\
     ${libs.Sql.classpath}:\
     ${libs.jstl11.classpath}:\
-    ${libs.jaxb.classpath}
+    ${libs.jaxb.classpath}:\
+    ${file.reference.serializer-2.7.0.jar}:\
+    ${file.reference.avalon-framework-4.2.0.jar}:\
+    ${file.reference.batik-all-1.7.jar}:\
+    ${file.reference.commons-io-1.3.1.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.xalan-2.7.0.jar}:\
+    ${file.reference.xercesImpl-2.7.1.jar}:\
+    ${file.reference.xml-apis-1.3.04.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}:\
+    ${file.reference.xmlgraphics-commons-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
