--- a/trunk/XMLProject/nbproject/private/private.properties
+++ b/trunk/XMLProject/nbproject/private/private.properties
@@ -1,4 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\Hoang\\.netbeans\\6.9\\tomcat60.properties
 j2ee.server.home=D:\\Work\\Tool\\apache-tomcat-6.0.32
 j2ee.server.instance=tomcat60:home=D:\\Work\\Tool\\apache-tomcat-6.0.32
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Hoang\\.netbeans\\6.9\\build.properties
