--- a/XMLProject/nbproject/project.properties
+++ b/XMLProject/nbproject/project.properties
@@ -23,11 +23,13 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.avalon-framework-4.2.0.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\avalon-framework-4.2.0.jar
 file.reference.batik-all-1.7.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\batik-all-1.7.jar
 file.reference.commons-io-1.3.1.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\commons-io-1.3.1.jar
 file.reference.commons-logging-1.0.4.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\commons-logging-1.0.4.jar
+file.reference.fop.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\build\\fop.jar
 file.reference.serializer-2.7.0.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\serializer-2.7.0.jar
 file.reference.xalan-2.7.0.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\xalan-2.7.0.jar
 file.reference.xercesImpl-2.7.1.jar=D:\\Study\\XML\\XMLKit\\fop-1.0\\lib\\xercesImpl-2.7.1.jar
@@ -54,7 +56,8 @@ javac.classpath=\
     ${file.reference.xercesImpl-2.7.1.jar}:\
     ${file.reference.xml-apis-1.3.04.jar}:\
     ${file.reference.xml-apis-ext-1.3.04.jar}:\
-    ${file.reference.xmlgraphics-commons-1.4.jar}
+    ${file.reference.xmlgraphics-commons-1.4.jar}:\
+    ${file.reference.fop.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -83,7 +86,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -92,7 +94,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
-runmain.jvmargs=
+runmain.jvmargs=-Xmx256m
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
