--- a/trunk/XMLProject/web/WEB-INF/web.xml
+++ b/trunk/XMLProject/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>PDFController</servlet-name>
         <servlet-class>Controller.PDFController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProductPDF</servlet-name>
+        <servlet-class>Controller.ProductPDF</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AppWebService</servlet-name>
         <url-pattern>/AppWebService</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>PDFController</servlet-name>
         <url-pattern>/PDFController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProductPDF</servlet-name>
+        <url-pattern>/ProductPDF</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AdminController</servlet-name>
